@@ -1,5 +1,6 @@
 10/11/25:
 
+- Fix inputting item quantity and navigating to different page resetting selected amount in Shop
 - Fix typing letters into quantity input displaying NaN
 - Fix clearing out quantity input displaying NaN
 - Update increment/decrement buttons in Shop to remove items at 0 quantity from cart
